# fenix

./: .gitattributes  .gitignore  README.md  Supported-Brokers.md  __init__.py  aliceblue.py  angelone.py  choice.py  finvasia.py  fivepaisa.py  fyers.py  iifl.py  kotak.py  kotakneo.py  kunjee.py  mastertrust.py  motilaloswal.py  paper.py  pyproject.toml  setup.py  symphony.py  upstox.py  vpc.py  zerodha.py
.github/workflows/: release.yml
base/: __init__.py  constants.py  errors.py  exchange.py
docs/: paper_mode_rollout_prompt.md
fenix/: __init__.py  aliceblue.py  anandrathi.py  angelone.py  choice.py  dhan.py  finvasia.py  fivepaisa.py  fyers.py  groww.py  iifl.py  kotak.py  kotakneo.py  kunjee.py  mastertrust.py  motilaloswal.py  paper.py  symphony.py  upstox.py  vpc.py  zerodha.py
fenix/base/: __init__.py  broker.py  constants.py  errors.py
fenix/paper/: __init__.py  client.py  matching_engine.py  state.py
tests/: test_aliceblue_order_any.py  test_angelone_paper.py  test_broker_logging.py  test_generated_order_methods.py  test_mastertrust_paper.py  test_paper_logging.py  test_paper_mode.py  test_zerodha_paper.py
website/: README.md  index.html  serve.py
website/assets/css/: styles.css
website/assets/img/brand/: site.webmanifest
website/assets/js/: app.js  contact-modal.js  nav.js
website/content/: account.md  add-broker.md  api-endpoints.md  architecture.md  authentication.md  broker-aliceblue.md  broker-anandrathi.md  broker-angelone.md  broker-dhan.md  broker-finvasia.md  broker-fivepaisa.md  broker-fyers.md  broker-groww.md  broker-iifl.md  broker-kotakneo.md  broker-mastertrust.md  broker-motilaloswal.md  broker-symphony.md  broker-upstox.md  broker-zerodha.md  brokers.md  changelog.md  constants.md  describe.md  errors.md  examples.md  install.md  logging.md  maps.md  orders.md  overview.md  paper-mode.md  positions.md  pro-broker-aliceblue.md  pro-broker-angelone.md  pro-broker-finvasia.md  pro-broker-fivepaisa.md  pro-broker-fyers.md  pro-broker-iifl.md  pro-broker-kotak.md  (+21 more)
website/docs/superpowers/specs/: 2026-06-20-contact-modal-design.md
website/tools/: _nav_brokers.json  gen_broker_pages.py
wiki/: Home.md  Install.md  Manual.md  Supported-Brokers.md
